--- a/MarchMadness.ipynb
+++ b/MarchMadness.ipynb
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -32,17 +32,17 @@
      "input": [
       "##READ IN DATA\n",
       "\n",
-      "regularSeasonResults = pd.read_csv('./Raw Data\\\\regular_season_results.csv')\n",
-      "seasons = pd.read_csv('./Raw Data\\\\seasons.csv')\n",
-      "teams = pd.read_csv('./Raw Data\\\\teams.csv')\n",
-      "tourneyResults = pd.read_csv('./Raw Data\\\\tourney_results.csv')\n",
-      "tourneySeeds = pd.read_csv('./Raw Data\\\\tourney_seeds.csv')\n",
-      "tourneySlots = pd.read_csv('./Raw Data\\\\tourney_slots.csv')"
+      "regularSeasonResults = pd.read_csv('./Raw Data/regular_season_results.csv')\n",
+      "seasons = pd.read_csv('./Raw Data/seasons.csv')\n",
+      "teams = pd.read_csv('./Raw Data/teams.csv')\n",
+      "tourneyResults = pd.read_csv('./Raw Data/tourney_results.csv')\n",
+      "tourneySeeds = pd.read_csv('./Raw Data/tourney_seeds.csv')\n",
+      "tourneySlots = pd.read_csv('./Raw Data/tourney_slots.csv')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -95,7 +95,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 172
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -109,13 +109,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 173,
+       "prompt_number": 6,
        "text": [
         "0.5974402094702848"
        ]
       }
      ],
-     "prompt_number": 173
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -124,7 +124,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
